--- a/views/note.ejs
+++ b/views/note.ejs
@@ -8,7 +8,6 @@
       html {
         margin: 0;
         padding: 0;
-        text-align: center;
       }
 
       canvas {
@@ -91,7 +90,7 @@
           <div class="input-group p-1">
             <span class="input-group-text">就讀學校</span>
             <input type="text" aria-label="school" id="school" class="form-control" />
-            <label class="input-group-text" for="grade">年級</label>
+            <label class="input-group-text" for="grade">就讀年級</label>
             <select class="form-select" id="grade">
               <option value=""></option>
               <option value="幼大班">幼大班</option>
@@ -112,31 +111,31 @@
           <div class="input-group p-1">
             <span class="input-group-text">聯絡電話</span>
             <input type="text" aria-label="tel" id="tel" class="form-control" />
-            <span class="input-group-text">地址</span>
+            <span class="input-group-text">居住地址</span>
             <input type="text" aria-label="address" id="address" class="form-control" />
           </div>
           <div class="input-group p-1">
-            <span class="input-group-text">父親姓名</span>
+            <span class="input-group-text">家長1姓名</span>
             <input type="text" aria-label="father_name" id="father_name" class="form-control" />
-            <span class="input-group-text">連絡電話</span>
+            <span class="input-group-text">家長1手機</span>
             <input type="text" aria-label="father_mobile" id="father_mobile" class="form-control" />
           </div>
           <div class="input-group p-1">
-            <span class="input-group-text">父親職業</span>
+            <span class="input-group-text">家長1職業</span>
             <input type="text" aria-label="father_profession" id="father_profession" class="form-control" />
-            <span class="input-group-text">公司電話</span>
+            <span class="input-group-text">家長1公司電話</span>
             <input type="text" aria-label="father_office_tel" id="father_office_tel" class="form-control" />
           </div>
           <div class="input-group p-1">
-            <span class="input-group-text">母親姓名</span>
+            <span class="input-group-text">家長2姓名</span>
             <input type="text" aria-label="mother_name" id="mother_name" class="form-control" />
-            <span class="input-group-text">連絡電話</span>
+            <span class="input-group-text">家長2手機</span>
             <input type="text" aria-label="mother_mobile" id="mother_mobile" class="form-control" />
           </div>
           <div class="input-group p-1">
-            <span class="input-group-text">母親職業</span>
+            <span class="input-group-text">家長2職業</span>
             <input type="text" aria-label="mother_profession" id="mother_profession" class="form-control" />
-            <span class="input-group-text">公司電話</span>
+            <span class="input-group-text">家長2公司電話</span>
             <input type="text" aria-label="mother_office_tel" id="mother_office_tel" class="form-control" />
           </div>
           <div class="input-group p-1">
@@ -193,7 +192,7 @@
             <input id="course_extend" type="text" aria-label="class_other" class="form-control" />
           </div>
           <div class="input-group p-1">
-            <span class="input-group-text">其他兄弟姊妹</span>
+            <span class="input-group-text">兄弟姊妹</span>
             <div class="form-control">
               <div class="input-group p-1">
                 <span class="input-group-text">兄姐姓名</span>
@@ -240,7 +239,7 @@
             </div>
           </div>
           <div class="input-group p-1">
-            <span class="input-group-text">如何得知本班資訊</span>
+            <span class="input-group-text">本班資訊來源</span>
             <div class="form-control">
               <div class="nowrap">
                 <input class="form-check-input source_list" type="checkbox" value="親友介紹" id="source1" />
@@ -318,9 +317,9 @@
             <input type="text" aria-label="exam_ranking" id="exam_ranking" class="form-control" />
           </div>
           <div class="input-group p-1">
-            <span class="input-group-text">模擬考校排</span>
+            <span class="input-group-text">模考校排</span>
             <input type="text" aria-label="exam_ranking1" id="exam_ranking1" class="form-control" />
-            <span class="input-group-text">模擬考區排</span>
+            <span class="input-group-text">模考區排</span>
             <input type="text" aria-label="exam_ranking2" id="exam_ranking2" class="form-control" />
           </div>
           <div class="input-group p-1">
@@ -483,9 +482,5 @@
         </div>
       </div>
 </body>
-
-<script>
-
-</script>
 
 </html>
