--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -4,10 +4,24 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="modalLabel"></h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button id="modalBtn" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" id="modalbody"></div>
       <div class="modal-footer" id="modalfooter"></div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="modal2" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true"
+  aria-labelledby="modalLabel2" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalLabel2">Modal 2</h1>
+        <button id="modalBtn2" type="button" class="btn-close" data-bs-target="#modal" data-bs-toggle="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="modalbody2"></div>
+      <div class="modal-footer" id="modalfooter2"></div>
     </div>
   </div>
 </div>
