修正文字與載入選項

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,8 @@
     }
 </style>
 <div class="p-1 fixed-top d-flex flex-column" style="width: 60px;">
-    <a href="/admin/track" class="headerIcon badge text-bg-secondary"><i class="bi bi-search">追蹤</i></a>
-    <a href="/admin/askclass" class="headerIcon badge text-bg-secondary"><i class="bi bi-telephone-inbound">問班</i></a>
-    <!-- <a href="/admin" class="headerIcon badge text-bg-secondary"><i class="bi bi-arrow-left-right">修改</i></a> -->
+    <a href="/admin/track" class="headerIcon badge text-bg-secondary <%=track%>"><i class="bi bi-search">追蹤</i></a>
+    <a href="/admin/askclass" class="headerIcon badge text-bg-secondary <%=askclass%>"><i
+            class="bi bi-telephone-inbound">問班</i></a>
+    <a href="/admin" class="headerIcon badge text-bg-secondary"><i class="bi bi-telephone-inbound">登出</i></a>
 </div>
