--- a/views/mobile_header.ejs
+++ b/views/mobile_header.ejs
@@ -1,18 +1,22 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">FJBC</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/admin/track">追蹤紀錄表</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/admin/askclass">問班紀錄表</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">FJBC</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item <%=track%>">
+          <a class="nav-link" aria-current="page" href="/admin/track">追蹤紀錄表</a>
+        </li>
+        <li class="nav-item <%=askclass%>">
+          <a class="nav-link" aria-current="page" href="/admin/askclass">問班紀錄表</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/admin">登出</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
