--- a/views/web_index.ejs
+++ b/views/web_index.ejs
@@ -10,6 +10,7 @@
         white-space: nowrap;
       }
     </style>
+    <script>const apiurl = '<%= apiurl %>';</script>
     <title>問班表格</title>
 </head>
 
@@ -57,27 +58,27 @@
         <input type="text" aria-label="address" id="address" class="form-control" />
       </div>
       <div class="input-group p-1">
-        <span class="input-group-text">父親姓名</span>
+        <span class="input-group-text">家長1姓名</span>
         <input type="text" aria-label="father_name" id="father_name" class="form-control" />
-        <span class="input-group-text">父親手機</span>
+        <span class="input-group-text">家長1手機</span>
         <input type="text" aria-label="father_mobile" id="father_mobile" class="form-control" />
       </div>
       <div class="input-group p-1">
-        <span class="input-group-text">父親職業</span>
+        <span class="input-group-text">家長1職業</span>
         <input type="text" aria-label="father_profession" id="father_profession" class="form-control" />
-        <span class="input-group-text">公司電話</span>
+        <span class="input-group-text">家長1公司電話</span>
         <input type="text" aria-label="father_office_tel" id="father_office_tel" class="form-control" />
       </div>
       <div class="input-group p-1">
-        <span class="input-group-text">母親姓名</span>
+        <span class="input-group-text">家長2姓名</span>
         <input type="text" aria-label="mother_name" id="mother_name" class="form-control" />
-        <span class="input-group-text">母親手機</span>
+        <span class="input-group-text">家長2手機</span>
         <input type="text" aria-label="mother_mobile" id="mother_mobile" class="form-control" />
       </div>
       <div class="input-group p-1">
-        <span class="input-group-text">母親職業</span>
+        <span class="input-group-text">家長2職業</span>
         <input type="text" aria-label="mother_profession" id="mother_profession" class="form-control" />
-        <span class="input-group-text">公司電話</span>
+        <span class="input-group-text">家長2公司電話</span>
         <input type="text" aria-label="mother_office_tel" id="mother_office_tel" class="form-control" />
       </div>
       <div class="input-group p-1">
@@ -277,7 +278,7 @@
         <div class="form-control">
           <div class="nowrap">
             <input class="form-check-input" type="radio" name="english_listening" value="3"
-                   id="english_listening_good" />
+              id="english_listening_good" />
             <label class="form-check-label" for="english_listening_good">
               強
             </label>
@@ -290,7 +291,7 @@
           </div>
           <div class="nowrap">
             <input class="form-check-input" type="radio" name="english_listening" value="1"
-                   id="english_listening_bad" />
+              id="english_listening_bad" />
             <label class="form-check-label" for="english_listening_bad">
               弱
             </label>
@@ -397,10 +398,10 @@
           </div>
         </div>
       </div>
-      <div class="input-group p-1">
+      <!-- <div class="input-group p-1">
         <span class="input-group-text">接待老師</span>
         <input type="text" aria-label="reception" id="reception" class="form-control" />
-      </div>
+      </div> -->
       <p class="px-3 link-danger">已同意本表單收集之個人資料使用權，僅於「多易文理補習班」使用，非經當事人同意，不轉作其他用途。</p>
       <div class="d-grid gap-2">
         <button type="button" class="btn btn-success" onclick="submit()">儲存</button>
