--- a/views/mobile_header.ejs
+++ b/views/mobile_header.ejs
@@ -1,3 +1,9 @@
+<script>
+  const apiurl = '<%=url.api %>';
+  const logurl = '<%=url.log %>';
+  const token = '<%=token %>';
+  const currentName = '<%=name %>';
+</script>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">FJBC</a>
@@ -7,14 +13,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item <%=track%>">
+        <li class="nav-item <%=herderHover.track%>">
           <a class="nav-link" aria-current="page" href="/admin/track">追蹤紀錄表</a>
         </li>
-        <li class="nav-item <%=askclass%>">
+        <li class="nav-item <%=herderHover.askclass%>">
           <a class="nav-link" aria-current="page" href="/admin/askclass">問班紀錄表</a>
         </li>
+        <li class="nav-item <%=herderHover.responsibility%>">
+          <a class="nav-link" aria-current="page" href="/admin/responsibility">主副責老師查詢</a>
+        </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/admin">登出</a>
+          <a class="nav-link" aria-current="page" href="/admin" onclick="logout()">登出</a>
         </li>
       </ul>
     </div>
