--- a/views/mobile_responsibility.ejs
+++ b/views/mobile_responsibility.ejs
@@ -6,32 +6,24 @@
 </head>
 
 <body>
-  <%-include('header') %>
+  <%-include('mobile_header') %>
     <div class="container px-5">
       <h3 class="p-2">問班紀錄表</h3>
       <div class="input-group" role="search">
         <span class="input-group-text">起始</span>
         <input id="dateStatr" class="form-control" type="date" aria-label="start">
+      </div>
+      <div class="input-group" role="search">
         <span class="input-group-text">結束</span>
         <input id="dateEnd" class="form-control" type="date" aria-label="end">
+      </div>
+      <div class="input-group" role="search">
         <span class="input-group-text">搜尋</span>
-        <input id="keyword" class="form-control" type="search" placeholder="姓名、電話" aria-label="Search">
+        <select id="keyword" class="form-select"></select>
         <button class="btn btn-outline-success text-nowrap" type="submit" onclick="searchAskacademy()">搜尋</button>
       </div>
-      <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <!-- <th class="nowrap">ＩＤ</th> -->
-            <th class="nowrap w-10">填表日期</th>
-            <th class="nowrap w-15">學生姓名</th>
-            <th class="nowrap w-30">聯絡電話</th>
-            <th class="nowrap w-15">希望科目</th>
-            <th class="nowrap w-10">追蹤日期</th>
-            <th class="nowrap w-20">追蹤內容</th>
-          </tr>
-        </thead>
-        <tbody id="list"></tbody>
-      </table>
+      <div id="primary_list"></div>
+      <div id="secondary_list"></div>
     </div>
 </body>
 
