--- a/views/responsibility.ejs
+++ b/views/responsibility.ejs
@@ -15,13 +15,12 @@
         <span class="input-group-text">結束</span>
         <input id="dateEnd" class="form-control" type="date" aria-label="end">
         <span class="input-group-text">搜尋</span>
-        <input id="keyword" class="form-control" type="search" placeholder="姓名、電話" aria-label="Search">
+        <select id="keyword" class="form-select"></select>
         <button class="btn btn-outline-success text-nowrap" type="submit" onclick="searchAskacademy()">搜尋</button>
       </div>
       <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <!-- <th class="nowrap">ＩＤ</th> -->
             <th class="nowrap w-10">填表日期</th>
             <th class="nowrap w-15">學生姓名</th>
             <th class="nowrap w-30">聯絡電話</th>
@@ -30,7 +29,8 @@
             <th class="nowrap w-20">追蹤內容</th>
           </tr>
         </thead>
-        <tbody id="list"></tbody>
+        <tbody id="primary_list"></tbody>
+        <tfoot id="secondary_list"></tfoot>
       </table>
     </div>
 </body>
