新增備註欄位

--- a/views/mobile_note.ejs
+++ b/views/mobile_note.ejs
@@ -432,14 +432,17 @@
             <input type="text" aria-label="reception" id="reception" class="form-control" />
           </div>
           <div class="input-group">
-            <label class="input-group-text" for="brother2_grade">主責老師</label>
+            <label class="input-group-text" for="primary_caregiver">主責老師</label>
             <select id="primary_caregiver" class="form-select"></select>
           </div>
           <div class="input-group">
-            <label class="input-group-text" for="brother2_grade">次責老師</label>
+            <label class="input-group-text" for="secondary_caregiver">次責老師</label>
             <select id="secondary_caregiver" class="form-select"></select>
           </div>
-          <!-- <p class="px-3 link-danger">已同意本表單收集之個人資料使用權，僅於「多易文理補習班」使用，非經當事人同意，不轉作其他用途。</p> -->
+          <div class="input-group p-1">
+            <label class="input-group-text" for="Remark">備註</label>
+            <textarea id="Remark" class="form-control"></textarea>
+          </div>
 
           <div class="d-grid gap-2 d-flex">
             <div class="btn-group" role="group" aria-label="Basic outlined example">
