--- a/views/responsibility.ejs
+++ b/views/responsibility.ejs
@@ -8,7 +8,7 @@
 <body>
   <%-include('header') %>
     <div class="container px-5">
-      <h3 class="p-2">問班紀錄表</h3>
+      <h3 class="p-2">負責學生表</h3>
       <div class="input-group" role="search">
         <span class="input-group-text">起始</span>
         <input id="dateStatr" class="form-control" type="date" aria-label="start">
